# jobx

./: .coverage  .dockerignore  .gitignore  Dockerfile  MARKET_ANALYSIS_README.md  README.md  SETUP_README.md  USAGE_INSTRUCTIONS.md  coverage.xml  diagnose.sh  example_config.yaml  example_config_with_search_terms.yaml  example_market_config.yaml  example_parquet.py  monitor_scraper.sh  monitor_searches.py  pyproject.toml  run_market_analysis.sh  run_safe_analysis.py  run_single_market.sh  safe_search_config.yaml  setup.sh  slow_market_scraper.sh  smart_scheduler.py  spec.md  test_anti_detection.yaml  test_config.yaml  uninstall.sh
jobx/: __init__.py  anti_detection.py  cli.py  exception.py  model.py  py.typed  scoring.py  serp.py  util.py
jobx/indeed/: __init__.py  constant.py  util.py
jobx/linkedin/: __init__.py  constant.py  util.py
jobx/market_analysis/: __init__.py  anti_detection_utils.py  batch_executor.py  cli.py  config_loader.py  data_aggregator.py  location_filter.py  logger.py  report_generator.py  statistics_calculator.py  visualization.py
tests/: __init__.py  conftest.py  test_anti_detection.py  test_config_loader.py  test_observability.py  test_recovery.py  test_scoring.py  test_serp.py
tests/integration/: __init__.py  test_scraping.py
tests/unit/: __init__.py  test_cli.py  test_model.py  test_util.py
